<resources>
    <string name="app_name">Pocket Watcher</string>
    <string name="login_subText">Unlock your saving potential</string>
    <string name="pocket_watcher">Pocket Watcher</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign up</string>

    <string name="hello_s">Hello %s!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="used">Used</string>
    <string name="limit">Limit</string>
    <string name="no_limit_set_set_a_limit_to_help_track_your_expenses">No limit set! Set a limit to help track your expenses!</string>
    <string name="zero_point_zero">0.00</string>
    <string name="daily_expenses">Daily Expenses</string>
    <string name="weekly_expenses">Weekly Expenses</string>
    <string name="monthly_expenses">Monthly Expenses</string>
    <string name="dollar_zero_point_zero">$0.00</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="limitations">Limitations</string>
    <string name="limitation_longtext">Stay on track by setting a limit!</string>
    <string name="limit_explanation">Setting daily, weekly, or monthly limits help keep you on track of your spending and saving goals! Enter a limit for either daily, weekly, or monthly and click the Calculate button to see limits for all time periods!</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="set">Set</string>
    <string name="remove_limit">Remove Limit</string>
    <string name="calculate">Calculate</string>


    <string name="title">Title</string>
    <string name="tag">Tag:</string>
    <string name="gas">Gas</string>
    <string name="_2020_04_12">2020-04-12</string>
    <string name="value">Value</string>
    <string name="add_expense">Add Expense</string>

    <string name="snack_bar_undo">Undo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
